--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.64.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "next-themes": "^0.2.1"
   }
 }
